--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -16,7 +16,7 @@
 }
 
 .info {
-  margin: 0px auto;
+  margin: 20px auto;
   width: auto;
   max-width: 600px;
 }
@@ -37,11 +37,12 @@
   display: flex;
 
   align-items: center;
+  justify-content: space-between;
   flex-wrap: wrap;
 }
 
 .form-input {
-  width: 450px;
+  width: 30%;
   margin: 0px 10px;
 }
 .trip-toggle {
