--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -33,7 +33,12 @@
               </mat-form-field>
               <mat-form-field class="form-input" appearance="outline">
                 <mat-label>Destination</mat-label>
+
+
+
+             
                 <mat-select
+                class="mat-input-element mat-form-field-autofill-control ng-tns-c10-5 ng-pristine ng-invalid cdk-text-field-autofill-monitored ng-touched"
                   required
                   [(ngModel)]="destination"
                   name="destination"
