--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,200 +1,14 @@
-
-
+<h1>Hughes</h1>
 <div class="container">
   <mat-tab-group>
     <mat-tab label="Redemptions">
-      <div class="content">
-        <div class="heading">
-          <div class="info">
-            Get to know how may points you would need have to redeem a flight to
-            the destination of your choice
-          </div>
-        </div>
-
-        <form (ngSubmit)="submitInput(searchForm)" #searchForm="ngForm">
-          <div class="form">
-            <div class="form-wrapper">
-              <mat-form-field class="form-input" appearance="outline">
-                <mat-label>Flying with</mat-label>
-                <mat-select required [(ngModel)]="carrier" name="carrier">
-                  <mat-option value="KQ">Kenya Airways</mat-option>
-                </mat-select>
-              </mat-form-field>
-              <mat-form-field class="form-input" appearance="outline">
-                <mat-label>Origin</mat-label>
-                <mat-select required [(ngModel)]="origin" name="origin">
-                  <mat-option
-                    *ngFor="let route of destinationData"
-                    [value]="route"
-                  >
-                    {{ route }}
-                  </mat-option>
-                </mat-select>
-              </mat-form-field>
-              <mat-form-field class="form-input" appearance="outline">
-                <mat-label>Destination</mat-label>
-
-
-
-             
-                <mat-select
-                class="mat-input-element mat-form-field-autofill-control ng-tns-c10-5 ng-pristine ng-invalid cdk-text-field-autofill-monitored ng-touched"
-                  required
-                  [(ngModel)]="destination"
-                  name="destination"
-                >
-                  <mat-option
-                    *ngFor="let route of destinationData"
-                    [value]="route"
-                  >
-                    {{ route }}
-                  </mat-option>
-                </mat-select>
-              </mat-form-field>
-            </div>
-            <div class="btn-wrapper">
-              <button type="submit" mat-flat-button color="warn">
-                Calculate
-              </button>
-            </div>
-          </div>
-        </form>
-
-        <div *ngIf="showResult" class="route-title">
-          <h6>{{ origin }} - {{ destination }}</h6>
-        </div>
-
-        <div class="flex-box cards-wrapper">
-          <mat-card *ngIf="showResult" class="card" appearance="outlined">
-            <mat-card-header>
-              <mat-card-title>Economy Class</mat-card-title>
-            </mat-card-header>
-            <mat-card-content>
-              <div class="flex-box">
-                <h4>Points to Redeem</h4>
-                -
-                <h4>{{ result.EconomyClass }}</h4>
-              </div>
-
-              <div>
-                <button mat-flat-button color="primary">Search flight</button>
-              </div>
-            </mat-card-content>
-          </mat-card>
-
-          <mat-card *ngIf="showResult" class="card" appearance="outlined">
-            <mat-card-header>
-              <mat-card-title>Business Class</mat-card-title>
-            </mat-card-header>
-            <mat-card-content>
-              <div class="flex-box">
-                <h4>Points to Redeem</h4>
-                -
-                <h4>{{ result.BusinessClass }}</h4>
-              </div>
-
-              <div>
-                <button mat-flat-button color="primary">Search flight</button>
-              </div>
-            </mat-card-content>
-          </mat-card>
-        </div>
-
-        <p *ngIf="showError">No data available.</p>
-      </div>
+      <app-redemptions-search></app-redemptions-search>
     </mat-tab>
+
     <mat-tab label="Miles Calculator">
-      <div class="content">
-        <div class="heading">
-          <h3>Miles Calculator</h3>
-          <div class="info">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit
-            placeat expedita veritatis pariatur nobis dolorem, necessitatibus
-            blanditiis maiores! Ratione, hic dolores aperiam molestias nesciunt
-            reprehenderit quo repellat saepe corrupti doloribus.
-          </div>
-        </div>
-
-        <div class="form">
-          <div class="form-wrapper">
-            <mat-form-field class="form-input" appearance="outline">
-              <mat-label>Flying with</mat-label>
-              <mat-select>
-                <mat-option value="KQ">Kenya Airways</mat-option>
-              </mat-select>
-            </mat-form-field>
-            <mat-form-field class="form-input" appearance="outline">
-              <mat-label>Origin</mat-label>
-              <mat-select>
-                <mat-option value="one">Nairobi (NBO)</mat-option>
-                <mat-option value="one">Amsterdam (AMS)</mat-option>
-                <mat-option value="one">Krakow (KRK)</mat-option>
-              </mat-select>
-            </mat-form-field>
-            <mat-form-field class="form-input" appearance="outline">
-              <mat-label>Destination</mat-label>
-              <mat-select>
-                <mat-option value="one">Nairobi (NBO)</mat-option>
-                <mat-option value="one">Amsterdam (AMS)</mat-option>
-                <mat-option value="one">Krakow (KRK)</mat-option>
-              </mat-select>
-            </mat-form-field>
-            <mat-form-field class="form-input" appearance="outline">
-              <mat-label>Cabin Class</mat-label>
-              <mat-select>
-                <mat-option value="KQ">Business </mat-option>
-                <mat-option value="KQ">Economy </mat-option>
-              </mat-select>
-            </mat-form-field>
-            <mat-form-field class="form-input" appearance="outline">
-              <mat-label>Tier</mat-label>
-              <mat-select>
-                <mat-option value="one">Ruby</mat-option>
-                <mat-option value="one">Silver</mat-option>
-                <mat-option value="one">Gold</mat-option>
-                <mat-option value="one">Platinum</mat-option>
-              </mat-select>
-            </mat-form-field>
-          </div>
-          <div class="btn-wrapper">
-            <button mat-flat-button color="warn">Calculate</button>
-          </div>
-        </div>
-
-        <div class="flex-box cards-wrapper">
-          <mat-card class="card" appearance="outlined">
-            <mat-card-header>
-              <mat-card-title>Economy Class</mat-card-title>
-            </mat-card-header>
-            <mat-card-content>
-              <div class="flex-box">
-                <h4>Points to Redeem</h4>
-                <p>10000</p>
-              </div>
-
-              <div>
-                <button mat-flat-button color="primary">Search flight</button>
-              </div>
-            </mat-card-content>
-          </mat-card>
-
-          <mat-card class="card" appearance="outlined">
-            <mat-card-header>
-              <mat-card-title>Business Class</mat-card-title>
-            </mat-card-header>
-            <mat-card-content>
-              <div class="flex-box">
-                <h4>Points to Redeem</h4>
-                <p>10000</p>
-              </div>
-
-              <div>
-                <button mat-flat-button color="primary">Search flight</button>
-              </div>
-            </mat-card-content>
-          </mat-card>
-        </div>
-      </div>
+      <app-miles-calculator></app-miles-calculator>
     </mat-tab>
   </mat-tab-group>
 </div>
+
+<router-outlet></router-outlet>
