--- a/src/styles.css
+++ b/src/styles.css
@@ -11,3 +11,77 @@ body {
   padding: 0;
   font-family: Roboto, "Helvetica Neue", sans-serif;
 }
+
+.container {
+  height: 100%;
+  padding: 5rem;
+}
+
+.content {
+  height: auto;
+  min-height: 80%;
+  z-index: 1;
+  border-radius: 3px;
+  padding: 20px 0px;
+}
+
+.heading {
+  text-align: center;
+}
+
+.info {
+  margin: 20px auto;
+  width: auto;
+  max-width: 600px;
+}
+.flex-box {
+  display: flex;
+  align-items: center;
+  gap: 20px;
+}
+
+.form {
+  width: 70%;
+  margin: 30px auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+.form-wrapper {
+  display: flex;
+
+  align-items: center;
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
+
+.form-input {
+  width: 30%;
+  margin: 0px 10px;
+}
+.trip-toggle {
+  margin: 20px 0px;
+}
+
+.btn-wrapper {
+  margin: 0px 10px;
+  display: flex;
+  align-items: center;
+}
+
+.route-title {
+  text-align: center;
+}
+
+.route-title h6 {
+  font-size: 30px;
+  font-weight: normal;
+}
+.cards-wrapper {
+  flex-wrap: wrap;
+
+  justify-content: center;
+}
+.card {
+  width: 500px;
+}
