1.Edit components styling 2.Change base url to point to dev backend url

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,14 +1,15 @@
-<h1>Hughes</h1>
 <div class="container">
-  <mat-tab-group>
-    <mat-tab label="Redemptions">
-      <app-redemptions-search></app-redemptions-search>
-    </mat-tab>
+  <div class="wrapper">
+    <mat-tab-group>
+      <mat-tab label="Redemptions">
+        <app-redemptions-search></app-redemptions-search>
+      </mat-tab>
 
-    <mat-tab label="Miles Calculator">
-      <app-miles-calculator></app-miles-calculator>
-    </mat-tab>
-  </mat-tab-group>
+      <mat-tab label="Miles Calculator">
+        <app-miles-calculator></app-miles-calculator>
+      </mat-tab>
+    </mat-tab-group>
+  </div>
 </div>
 
 <router-outlet></router-outlet>
