--- a/src/app/components/miles-calculator/miles-calculator.component.html
+++ b/src/app/components/miles-calculator/miles-calculator.component.html
@@ -1,93 +1,109 @@
+<div class="content">
+  <div class="heading">
+    <h3>Miles Calculator</h3>
+    <div class="info">Check how many Miles you'll earn on your flight</div>
+  </div>
 
-      <div class="content">
-        <div class="heading">
-          <h3>Miles Calculator</h3>
-          <div class="info">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit
-            placeat expedita veritatis pariatur nobis dolorem, necessitatibus
-            blanditiis maiores! Ratione, hic dolores aperiam molestias nesciunt
-            reprehenderit quo repellat saepe corrupti doloribus.
-          </div>
+  <div class="form">
+    <mat-grid-list [cols]="columns$ | async" rowHeight="100px">
+      <mat-grid-tile>
+        <mat-form-field class="form-input" appearance="outline">
+          <mat-label>Flying with</mat-label>
+          <mat-select>
+            <mat-option value="KQ">Kenya Airways</mat-option>
+          </mat-select>
+        </mat-form-field>
+      </mat-grid-tile>
+      <mat-grid-tile>
+        <mat-form-field class="form-input" appearance="outline">
+          <mat-label>Origin</mat-label>
+          <mat-select>
+            <mat-option value="one">Nairobi (NBO)</mat-option>
+            <mat-option value="one">Amsterdam (AMS)</mat-option>
+            <mat-option value="one">Krakow (KRK)</mat-option>
+          </mat-select>
+        </mat-form-field>
+      </mat-grid-tile>
+      <mat-grid-tile>
+        <mat-form-field class="form-input" appearance="outline">
+          <mat-label>Destination</mat-label>
+          <mat-select>
+            <mat-option value="one">Nairobi (NBO)</mat-option>
+            <mat-option value="one">Amsterdam (AMS)</mat-option>
+            <mat-option value="one">Krakow (KRK)</mat-option>
+          </mat-select>
+        </mat-form-field>
+      </mat-grid-tile>
+
+      <mat-grid-tile>
+        <mat-form-field class="form-input" appearance="outline">
+          <mat-label>Cabin Class</mat-label>
+          <mat-select>
+            <mat-option value="KQ">Business </mat-option>
+            <mat-option value="KQ">Economy </mat-option>
+          </mat-select>
+        </mat-form-field>
+      </mat-grid-tile>
+
+      <mat-grid-tile>
+        <mat-form-field class="form-input" appearance="outline">
+          <mat-label>Tier</mat-label>
+          <mat-select>
+            <mat-option value="one">Ruby</mat-option>
+            <mat-option value="one">Silver</mat-option>
+            <mat-option value="one">Gold</mat-option>
+            <mat-option value="one">Platinum</mat-option>
+          </mat-select>
+        </mat-form-field>
+      </mat-grid-tile>
+    </mat-grid-list>
+
+    <div class="btn-wrapper">
+      <button mat-flat-button class="btn">Calculate</button>
+    </div>
+  </div>
+
+  <div class="flex-box cards-wrapper">
+    <mat-card
+      *ngIf="showResult"
+      class="card"
+      appearance="outlined"
+      [@fadeInOut]
+    >
+      <mat-card-header>
+        <mat-card-title>Economy Class</mat-card-title>
+      </mat-card-header>
+      <mat-card-content>
+        <div class="flex-box">
+          <h4>Points to Redeem</h4>
+          <p>10000</p>
         </div>
 
-        <div class="form">
-          <div class="form-wrapper">
-            <mat-form-field class="form-input" appearance="outline">
-              <mat-label>Flying with</mat-label>
-              <mat-select>
-                <mat-option value="KQ">Kenya Airways</mat-option>
-              </mat-select>
-            </mat-form-field>
-            <mat-form-field class="form-input" appearance="outline">
-              <mat-label>Origin</mat-label>
-              <mat-select>
-                <mat-option value="one">Nairobi (NBO)</mat-option>
-                <mat-option value="one">Amsterdam (AMS)</mat-option>
-                <mat-option value="one">Krakow (KRK)</mat-option>
-              </mat-select>
-            </mat-form-field>
-            <mat-form-field class="form-input" appearance="outline">
-              <mat-label>Destination</mat-label>
-              <mat-select>
-                <mat-option value="one">Nairobi (NBO)</mat-option>
-                <mat-option value="one">Amsterdam (AMS)</mat-option>
-                <mat-option value="one">Krakow (KRK)</mat-option>
-              </mat-select>
-            </mat-form-field>
-            <mat-form-field class="form-input" appearance="outline">
-              <mat-label>Cabin Class</mat-label>
-              <mat-select>
-                <mat-option value="KQ">Business </mat-option>
-                <mat-option value="KQ">Economy </mat-option>
-              </mat-select>
-            </mat-form-field>
-            <mat-form-field class="form-input" appearance="outline">
-              <mat-label>Tier</mat-label>
-              <mat-select>
-                <mat-option value="one">Ruby</mat-option>
-                <mat-option value="one">Silver</mat-option>
-                <mat-option value="one">Gold</mat-option>
-                <mat-option value="one">Platinum</mat-option>
-              </mat-select>
-            </mat-form-field>
-          </div>
-          <div class="btn-wrapper">
-            <button mat-flat-button color="warn">Calculate</button>
-          </div>
+        <div>
+          <button mat-flat-button color="btn">Search flight</button>
+        </div>
+      </mat-card-content>
+    </mat-card>
+
+    <mat-card
+      *ngIf="showResult"
+      class="card"
+      appearance="outlined"
+      [@fadeInOut]
+    >
+      <mat-card-header>
+        <mat-card-title>Business Class</mat-card-title>
+      </mat-card-header>
+      <mat-card-content>
+        <div class="flex-box">
+          <h4>Points to Redeem</h4>
+          <p>10000</p>
         </div>
 
-        <div class="flex-box cards-wrapper">
-          <mat-card class="card" appearance="outlined">
-            <mat-card-header>
-              <mat-card-title>Economy Class</mat-card-title>
-            </mat-card-header>
-            <mat-card-content>
-              <div class="flex-box">
-                <h4>Points to Redeem</h4>
-                <p>10000</p>
-              </div>
-
-              <div>
-                <button mat-flat-button color="primary">Search flight</button>
-              </div>
-            </mat-card-content>
-          </mat-card>
-
-          <mat-card class="card" appearance="outlined">
-            <mat-card-header>
-              <mat-card-title>Business Class</mat-card-title>
-            </mat-card-header>
-            <mat-card-content>
-              <div class="flex-box">
-                <h4>Points to Redeem</h4>
-                <p>10000</p>
-              </div>
-
-              <div>
-                <button mat-flat-button color="primary">Search flight</button>
-              </div>
-            </mat-card-content>
-          </mat-card>
+        <div>
+          <button mat-flat-button color="btn">Search flight</button>
         </div>
-      </div>
-
+      </mat-card-content>
+    </mat-card>
+  </div>
+</div>
