--- a/src/app/components/redemptions-search/redemptions-search.component.css
+++ b/src/app/components/redemptions-search/redemptions-search.component.css
@@ -2,7 +2,24 @@
   color: red !important;
 }
 
-.btn-success {
-  background: rgb(58, 141, 58) !important;
+.btn {
+  background: #ed1c24 !important;
   color: rgb(255, 255, 255) !important;
+  border-radius: 4px 12px;
+  padding: 15px;
+  min-width: 150px;
+  font-size: 15px;
+}
+
+.btn-link {
+  color: #ed1c24 !important;
+  background: rgb(255, 255, 255) !important;
+
+  margin-top: 40px;
+
+  font-size: 15px;
+}
+
+.btn-link:hover .btn-link:focus {
+  background: rgb(240, 207, 207) !;
 }
