--- a/src/app/components/redemptions-search/redemptions-search.component.html
+++ b/src/app/components/redemptions-search/redemptions-search.component.html
@@ -1,8 +1,9 @@
 <div class="content">
   <div class="heading">
+    <h3>Redemption Miles Calculator</h3>
     <div class="info">
-      Get to know how may points you would need have to redeem a flight to the
-      destination of your choice
+      Get to know how may points you need to redeem a flight to the destination
+      of your choice
     </div>
   </div>
 
@@ -11,48 +12,69 @@
     #searchForm="ngForm"
   >
     <div class="form">
-      <div class="form-wrapper">
-        <mat-form-field class="form-input" appearance="outline">
-          <mat-label>Flying with</mat-label>
-          <mat-select required [(ngModel)]="carrier" name="carrier">
-            <mat-option value="KQ">Kenya Airways</mat-option>
-          </mat-select>
-        </mat-form-field>
-        <mat-form-field class="form-input" appearance="outline">
-          <mat-label>Origin</mat-label>
-          <mat-select required [(ngModel)]="origin" name="origin">
-            <mat-option *ngFor="let route of destinationData" [value]="route">
-              {{ route }}
-            </mat-option>
-          </mat-select>
-        </mat-form-field>
-        <mat-form-field class="form-input" appearance="outline">
-          <mat-label>Destination</mat-label>
+      <mat-grid-list [cols]="columns$ | async" rowHeight="100px">
+        <mat-grid-tile>
+          <mat-form-field class="form-input" appearance="outline">
+            <mat-label>Flying with</mat-label>
+            <mat-select required [(ngModel)]="carrier" name="carrier">
+              <mat-option value="KQ">Kenya Airways</mat-option>
+            </mat-select>
+          </mat-form-field>
+        </mat-grid-tile>
+        <mat-grid-tile>
+          <mat-form-field class="form-input" appearance="outline">
+            <mat-label>Origin</mat-label>
+            <mat-select required [(ngModel)]="origin" name="origin">
+              <mat-option
+                *ngFor="let route of destinationData"
+                [value]="route.name"
+              >
+                {{ route.name }}
+              </mat-option>
+            </mat-select>
+          </mat-form-field>
+        </mat-grid-tile>
+        <mat-grid-tile>
+          <mat-form-field class="form-input full-width" appearance="outline">
+            <mat-label>Destination</mat-label>
 
-          <mat-select
-            class="mat-input-element mat-form-field-autofill-control ng-tns-c10-5 ng-pristine ng-invalid cdk-text-field-autofill-monitored ng-touched"
-            required
-            [(ngModel)]="destination"
-            name="destination"
-          >
-            <mat-option *ngFor="let route of destinationData" [value]="route">
-              {{ route }}
-            </mat-option>
-          </mat-select>
-        </mat-form-field>
-      </div>
+            <mat-select
+              class="mat-input-element mat-form-field-autofill-control ng-tns-c10-5 ng-pristine ng-invalid cdk-text-field-autofill-monitored ng-touched"
+              required
+              [(ngModel)]="destination"
+              name="destination"
+            >
+              <mat-option
+                *ngFor="let route of destinationData"
+                [value]="route.name"
+              >
+                {{ route.name }}
+              </mat-option>
+            </mat-select>
+          </mat-form-field>
+        </mat-grid-tile>
+      </mat-grid-list>
       <div class="btn-wrapper">
-        <button type="submit" mat-flat-button class="btn-success">Search</button>
+        <button type="submit" mat-flat-button class="btn">Search</button>
       </div>
     </div>
   </form>
 
   <div *ngIf="showResult" class="route-title">
-    <h6>{{ origin }} - {{ destination }}</h6>
+    <h6>
+      {{ origin }}
+      <mat-icon>flight_takeoff</mat-icon>
+      {{ destination }}
+    </h6>
   </div>
 
   <div class="flex-box cards-wrapper">
-    <mat-card *ngIf="showResult" class="card" appearance="outlined">
+    <mat-card
+      *ngIf="showResult"
+      class="card"
+      appearance="outlined"
+      [@fadeInOut]
+    >
       <mat-card-header>
         <mat-card-title>Economy Class</mat-card-title>
       </mat-card-header>
@@ -60,16 +82,21 @@
         <div class="flex-box">
           <h4>Points to Redeem</h4>
           -
-          <h4>{{ result.EconomyClass }}</h4>
+          <h4>{{ result.economyClassPoints }}</h4>
         </div>
 
-        <div>
-          <button mat-flat-button color="primary">Search flight</button>
-        </div>
+        <a href="https://www.kenya-airways.com/" target="_blank">
+          <button mat-flat-button class="btn">Search flight</button></a
+        >
       </mat-card-content>
     </mat-card>
 
-    <mat-card *ngIf="showResult" class="card" appearance="outlined">
+    <mat-card
+      *ngIf="showResult"
+      class="card"
+      appearance="outlined"
+      [@fadeInOut]
+    >
       <mat-card-header>
         <mat-card-title>Business Class</mat-card-title>
       </mat-card-header>
@@ -77,13 +104,23 @@
         <div class="flex-box">
           <h4>Points to Redeem</h4>
           -
-          <h4>{{ result.BusinessClass }}</h4>
+          <h4>{{ result.businessClassPoints }}</h4>
         </div>
 
-        <div>
-          <button mat-flat-button color="primary">Search flight</button>
-        </div>
+        <a href="https://www.kenya-airways.com/" target="_blank">
+          <button mat-flat-button class="btn">Search flight</button></a
+        >
       </mat-card-content>
     </mat-card>
+  </div>
+
+  <div>
+    <a
+      id="iuoql"
+      href="/ccms-api/attachments/download/6666918f884e1d6206cae3b1?project=portal"
+      title="AWARD FORM"
+      class="link-block"
+      ><button mat-flat-button class="btn-link">Download Award form</button></a
+    >
   </div>
 </div>
