update download awards link

--- a/src/app/components/redemptions-search/redemptions-search.component.html
+++ b/src/app/components/redemptions-search/redemptions-search.component.html
@@ -117,7 +117,7 @@
   <div>
     <a
       id="iuoql"
-      href="/ccms-api/attachments/download/6666918f884e1d6206cae3b1?project=portal"
+      href="https://portal-kq-uat.clm-comarch.com/ccms-api/attachments/download/6666918f884e1d6206cae3b1?project=portal"
       title="AWARD FORM"
       class="link-block"
       ><button mat-flat-button class="btn-link">Download Award form</button></a
