--- a/src/app/components/redemptions-search/redemptions-search.component.html
+++ b/src/app/components/redemptions-search/redemptions-search.component.html
@@ -114,11 +114,11 @@
     </mat-card>
   </div>
 
-  <div>
-    <a
+  <a
       id="iuoql"
-      href="https://portal-kq-uat.clm-comarch.com/ccms-api/attachments/download/6666918f884e1d6206cae3b1?project=portal"
+      href="https://drive.google.com/file/d/1h5K3-VdXDaGL_afJq2Ca7SzB6zYiHshU/view"
       title="AWARD FORM"
+      download
       class="link-block"
       ><button mat-flat-button class="btn-link">Download Award form</button></a
     >
