--- a/src/app/components/redemptions-search/redemptions-search.component.html
+++ b/src/app/components/redemptions-search/redemptions-search.component.html
@@ -114,7 +114,8 @@
     </mat-card>
   </div>
 
-  <a
+  <div>
+    <a
       id="iuoql"
       href="https://drive.google.com/file/d/1h5K3-VdXDaGL_afJq2Ca7SzB6zYiHshU/view"
       title="AWARD FORM"
